fixed initial input width on mobile

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -96,7 +96,7 @@ Home view's styling */
 }
 
 #searchContainer input {
-  width: 500px;
+  width: 95%;
   height: 30px;
   font-size: 17px;
   padding: 4px;
